src/objects/Harvest_Estimate__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Harvest_Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>United States Dollars - USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro - EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom Pounds - GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Dollars - CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia Dollars - AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Yen - JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Rupees - INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Dollars - NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland Francs - CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa Rand - ZAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan Afghanis - AFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania Leke - ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria Dinars - DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina Pesos - ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas Dollars - BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain Dinars - BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh Taka - BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados Dollars - BBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize Dollar - BZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda Dollars - BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil Reais - BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria Leva - BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile Pesos - CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Yuan Renminbi - CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia Pesos - COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica Colones - CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia Kuna - HRK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus Pounds - CYP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic Koruny - CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic Pesos - DOP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_At_Human_Format__c</fullName>
        <label>Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_At__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Issued_At__c</fullName>
        <label>Issued At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Written off)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_2_Amount__c</fullName>
        <label>Tax 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_2__c</fullName>
        <label>Tax 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <label>Harvest Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Harvest_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Issued_At__c</columns>
        <columns>Subject__c</columns>
        <columns>Amount__c</columns>
        <columns>Discount_Amount__c</columns>
        <columns>Tax_Amount__c</columns>
        <columns>Tax_2_Amount__c</columns>
        <columns>Due_Amount__c</columns>
        <columns>Due_At__c</columns>
        <columns>Notes__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EST-{000000}</displayFormat>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvest Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>